--- a/templates/results.html
+++ b/templates/results.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="/">Home</a>
+                <a class="navbar-brand" href="/">AskmeOffers</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -40,8 +40,9 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Wine Quality</h1>
+                            <h1>Coupon Prediction</h1>
                              <h1>{{prediction}}</h1>
+                             <h1>if 1 Coupon Acceped, if 0 Coupon Rejected</h1>
                             <span class="subheading"></span>
                         </div>
                     </div>
@@ -57,7 +58,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="https://www.linkedin.com/in/boktiarahmed73/">
+                                <a href="https://www.linkedin.com/in/revanth-reddy-pingala/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -65,7 +66,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.youtube.com/dswithbappy">
+                                <a href="https://youtube.com/@revanthreddy369">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-youtube fa-stack-1x fa-inverse"></i>
@@ -73,7 +74,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://github.com/entbappy">
+                                <a href="https://github.com/Revanth-Reddy-Pingala">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
