--- a/static/css2/style.css
+++ b/static/css2/style.css
@@ -4,7 +4,7 @@ body {
 .page-content {
 	width: 100%;
 	margin:  0 auto;
-	background: #4077c8;
+	background: #ce5eba;
 	display: flex;
 	display: -webkit-flex;
 	justify-content: center;
