--- a/templates/index.html
+++ b/templates/index.html
@@ -35,13 +35,13 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('static/assets/img/Amo.jpeg')">
+        <header class="masthead" style="background-image: url('static/assets/img/form-v9.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>AskmeOffers</h1>
-                            <span class="subheading">Coupon Acceptance Analysis and Prediction Web App</span>
+                            <span class="subheading"><h3>Coupon Acceptance Analysis and Prediction Web App</h3></span>
                         </div>
                     </div>
                 </div>
