--- a/templates/results.html
+++ b/templates/results.html
@@ -35,14 +35,13 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('static/assets/img/wine.gif')">
+        <header class="masthead" style="background-image: url('static/assets/img/Amo.jpeg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Coupon Prediction</h1>
+                            <h1>Coupon Prediction:</h1>
                              <h1>{{prediction}}</h1>
-                             <h1>if 1 Coupon Acceped, if 0 Coupon Rejected</h1>
                             <span class="subheading"></span>
                         </div>
                     </div>
